    User::removeWatch()
* ParserOptions::setTidy() that had no effect and was deprecated since 1.35
  has been removed.
* The constant ApiBase::PARAM_VALUE_LINKS, deprecated since 1.35 has been
  removed.
* …

=== Deprecations in 1.38 ===
* The MWGrants class is deprecated in favor of the new GrantsInfo and
  GrantsLocalization services.
* PageArchive::undeleteAsUser(), ::getFileStatus() and ::getRevisionStatus()
  were deprecated. Use UndeletePage instead.
* The global functions wfReadOnly() and wfReadOnlyReason() have been
  deprecated in favor of the ReadOnlyMode service.
* PageProps::getInstance() has been deprecated. Use
  MediaWikiServices::getPageProps() instead.
* User::setOption(), deprecated since 1.35, now emits deprecation warnings.
* Linker::formatComment(), ::formatLinksInComment(), ::commentBlock() and
  revComment() were deprecated. Use the new CommentFormatter service.
* Skin::getSkinStylePath now triggers deprecation warnings. Direct string path
  should be used instead.
* DatabaseBlock::purgeExpired(), deprecated since 1.36, now emits
  deprecation warnings.
* SkinTemplate::getPersonalToolsList(), deprecated since 1.35, now emits
  deprecation warnings.
* The following methods from the User class now trigger deprecation warnings:
   - ::blockedBy
   - ::getBlockId
* Content::getParserOutput() was deprecated.
  Use ContentRenderer::getParserOutput and override
  ContentHandler::fillParserOutput instead.
* Article::doDelete() was deprecated. Use WikiPage::doDeleteArticleReal if
  you only need to delete the article. If you also need things to happen
  with OutputPage, you may want to check the hooks in DeleteAction instead.
* Instantiating the MessageContent class now emits deprecation notices.
* Message::content() now triggers deprecation warnings.
* The following methods from the ParserOutput class now emit deprecation
  warnings:
   - ::hideNewSection()      - use ::setHideNewSection()